     load if needed.
- Changed syntax highlighting in editor to new backend.
  -> Highlighter can now be styled.
- PlayerTextBox text alignment can now be set to either Left, Right or Center.
- PlayerTextBox can now display a portrait next to the text. This portrait
  can be any Image or Movie type Resource.
- Styles have been updated.
- New button to Script type nodes added which allows to add scripts to the
  scene.
- Code Editor has a Search functionality and behaves more akin to other
  code editors (completion of brackets, quotes, tab-behavior, etc.)
- Support for multiple Sound Resources playing simultaniously and
  the number of Sound Resources that can be played simultaniously can
  be configured on a Project level.
- Sound Resources fade out when stopped instead of abruptly stopping.

Changes:
- In-Game title changed to JOIP Engine.
- Reworked editor models to work more consistently.
- Reworked project naming restrictions to work on all future supported
  systems.
- Code editor displays special info-text if no scripts are available.
- Removed WebEngine because of the overhead of using it.
- Changed build system from QMake to CMake.
- Reworked overlays. Overlays are using a manager to determine z-order.
- Fullscreen mode is on by default.
- Removed map button for now, since it is not implemented yet.

Fixed Bugs:
- Timer interval bug fixed; the timer doesn't run longer than expected anymore.
- Fixed OpenGL issues that prevented menus to be opened.
- Fixed multiple issues with editor code overlays.


================================================================================
Version 1.1.1.0
================================================================================

Changes:
- Resource tree filtering is more consistent with other trees and hides
  folders whose contents do not match the filter.

Fixed Bugs:
- Metronome not accepting null or empty string to reset beat sound was fixed.
- Fixed Metronome not clearing on stop.